# meteora_dlmm_indexer

./: Cargo.toml  Makefile  README.md  docker-compose.clickhouse.yml
api/: .env.example  Cargo.toml
api/src/: clickhouse.rs  errors.rs  main.rs  models.rs  utils.rs  validation.rs
api/src/handlers/: export.rs  mod.rs  pools.rs  quality.rs  swaps.rs  system.rs
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: main.js  styles.css
dashboard/src/lib/: dom.js  http.js  requests.js  template.js
indexer/: .env.example  Cargo.toml
indexer/src/: main.rs  storage.rs
indexer/src/parser/: decode.rs  idl.rs  instruction_utils.rs  mod.rs  models.rs
indexer/src/storage/: client.rs  models.rs  schema.rs  writer.rs
indexer/src/storage/transform/: aggregate.rs  extract.rs  mod.rs  rows.rs
indexer/src/yellowstone/: client.rs  mod.rs  subscriptions.rs
schema/: clickhouse_v2.sql
