[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
bs58 = "0.5.1"
dotenv = "0.15.0"
futures = "0.3.31"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.49.0", features = ["full"] }
tonic = { version = "0.12.3", features = ["tls", "tls-roots"] }
yellowstone-grpc-client = "4.0.0"
yellowstone-grpc-proto = "4.0.0"
